Learn Web scraping

--- a/Machine_Learning_Concept/Data_Gethering/JONS_SQL/Practical.ipynb
+++ b/Machine_Learning_Concept/Data_Gethering/JONS_SQL/Practical.ipynb
@@ -365,10 +365,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'Alice', 25), (2, 'Bob', 30), (3, 'Charlie', 35)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3  \n",
+    "conn = sqlite3.connect('database.db')  \n",
+    "cursor = conn.cursor()  \n",
+    "\n",
+    "# Create table if it does not exist\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS users (\n",
+    "\tid INTEGER PRIMARY KEY,\n",
+    "\tname TEXT,\n",
+    "\tage INTEGER\n",
+    ")\n",
+    "''')\n",
+    "\n",
+    "# Insert sample data if table is empty\n",
+    "cursor.execute(\"SELECT COUNT(*) FROM users\")\n",
+    "if cursor.fetchone()[0] == 0:\n",
+    "\tcursor.execute(\"INSERT INTO users (name, age) VALUES ('Alice', 25)\")\n",
+    "\tcursor.execute(\"INSERT INTO users (name, age) VALUES ('Bob', 30)\")\n",
+    "\tcursor.execute(\"INSERT INTO users (name, age) VALUES ('Charlie', 35)\")\n",
+    "\tconn.commit()\n",
+    "\n",
+    "cursor.execute(\"SELECT * FROM users\")  \n",
+    "data = cursor.fetchall()  # Database से data लाना\n",
+    "print(data)\n"
+   ]
   }
  ],
  "metadata": {
