Learn about Column Transformer

--- a/Feature_Engineering/Feature_Transformation/Numerical_Data/onehot_Encoding.ipynb
+++ b/Feature_Engineering/Feature_Transformation/Numerical_Data/onehot_Encoding.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -819,32 +819,13 @@
        "      <th>Skoda</th>\n",
        "      <th>Tata</th>\n",
        "      <th>Toyota</th>\n",
-       "      <th>Uncommon</th>\n",
        "      <th>Volkswagen</th>\n",
+       "      <th>uncommon</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7990</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3308</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <th>3245</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -855,9 +836,12 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7608</th>\n",
+       "      <th>8115</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -873,7 +857,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2713</th>\n",
+       "      <th>4413</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -889,10 +873,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4041</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <th>5595</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -900,19 +881,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2687</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -921,15 +889,15 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7338</th>\n",
+       "      <th>5306</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -937,10 +905,10 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1723</th>\n",
+       "      <th>5442</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -953,25 +921,39 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4793</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <th>6991</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2837</th>\n",
+       "      <th>4635</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7567</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -980,6 +962,24 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1836</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -990,31 +990,31 @@
       ],
       "text/plain": [
        "        BMW  Chevrolet   Ford  Honda  Hyundai  Mahindra  Maruti  Renault  \\\n",
-       "7990  False      False  False  False    False     False   False    False   \n",
-       "3308  False      False  False  False    False     False    True    False   \n",
-       "7608  False      False  False  False    False     False    True    False   \n",
-       "2713  False      False  False  False    False      True   False    False   \n",
-       "4041  False      False  False  False    False     False   False    False   \n",
-       "2687  False      False  False  False     True     False   False    False   \n",
-       "7338  False      False  False  False     True     False   False    False   \n",
-       "1723   True      False  False  False    False     False   False    False   \n",
-       "4793  False      False  False  False    False     False   False    False   \n",
-       "2837  False      False  False  False    False     False   False    False   \n",
+       "3245  False      False  False   True    False     False   False    False   \n",
+       "8115  False      False  False  False    False     False    True    False   \n",
+       "4413  False      False  False  False    False      True   False    False   \n",
+       "5595  False      False  False  False    False     False    True    False   \n",
+       "5306  False      False  False  False    False     False   False     True   \n",
+       "5442  False      False   True  False    False     False   False    False   \n",
+       "6991  False      False  False  False    False      True   False    False   \n",
+       "4635  False      False  False  False    False     False    True    False   \n",
+       "7567  False      False  False  False    False     False   False     True   \n",
+       "1836  False      False   True  False    False     False   False    False   \n",
        "\n",
-       "      Skoda   Tata  Toyota  Uncommon  Volkswagen  \n",
-       "7990  False   True   False     False       False  \n",
-       "3308  False  False   False     False       False  \n",
-       "7608  False  False   False     False       False  \n",
-       "2713  False  False   False     False       False  \n",
-       "4041  False   True   False     False       False  \n",
-       "2687  False  False   False     False       False  \n",
-       "7338  False  False   False     False       False  \n",
-       "1723  False  False   False     False       False  \n",
-       "4793  False  False    True     False       False  \n",
-       "2837  False   True   False     False       False  "
+       "      Skoda   Tata  Toyota  Volkswagen  uncommon  \n",
+       "3245  False  False   False       False     False  \n",
+       "8115  False  False   False       False     False  \n",
+       "4413  False  False   False       False     False  \n",
+       "5595  False  False   False       False     False  \n",
+       "5306  False  False   False       False     False  \n",
+       "5442  False  False   False       False     False  \n",
+       "6991  False  False   False       False     False  \n",
+       "4635  False  False   False       False     False  \n",
+       "7567  False  False   False       False     False  \n",
+       "1836  False  False   False       False     False  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
