--- a/Unsupervised_Machine_Learning/DBSCAN_lustering/Basic.practical.ipynb
+++ b/Unsupervised_Machine_Learning/DBSCAN_lustering/Basic.practical.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import\n"
+    "import pandas as pd\n",
+    "\n"
    ]
   }
  ],
