Learn Anomally Detection

--- a/ML_Pipeline/titanic_with_using pipeline.ipynb
+++ b/ML_Pipeline/titanic_with_using pipeline.ipynb
@@ -372,9 +372,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "370    1\n",
+       "14     0\n",
+       "431    1\n",
+       "715    0\n",
+       "1      1\n",
+       "Name: Survived, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_train.sample(5)"
    ]
