Learn F-P growth algorithm

--- a/Unsupervised_Machine_Learning/Association_Rule/Apriori_Algorithm.ipynb
+++ b/Unsupervised_Machine_Learning/Association_Rule/Apriori_Algorithm.ipynb
@@ -159,22 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((21293, 4),\n",
-       "              Date      Time  Transaction       Item\n",
-       " 4662   2016-11-27  14:00:18         2207     Coffee\n",
-       " 7945   2016-12-24  12:08:17         3811      Bread\n",
-       " 10502  2017-01-20  14:37:52         4999     Coffee\n",
-       " 10169  2017-01-17  13:41:06         4843  Alfajores\n",
-       " 17045  2017-03-08  13:22:39         7795   Truffles)"
+       "(             Date      Time  Transaction      Item\n",
+       " 12303  2017-02-02  15:58:52         5818    Coffee\n",
+       " 10224  2017-01-18  10:39:20         4872    Coffee\n",
+       " 19304  2017-03-25  14:29:13         8803  Sandwich\n",
+       " 4724   2016-11-28  12:05:00         2235  Sandwich\n",
+       " 18059  2017-03-16  12:44:27         8239     Bread,\n",
+       " (21293, 4))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,6 +182,13 @@
    "source": [
     "df.sample(5),df.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
