Update the code

--- a/Unsupervised_Machine_Learning/Association_Rule/F_P_Growth_Algorithm.ipynb
+++ b/Unsupervised_Machine_Learning/Association_Rule/F_P_Growth_Algorithm.ipynb
@@ -16,13 +16,13 @@
       "2       0.6        (A)\n",
       "3       0.4        (D)\n",
       "4       0.8        (C)\n",
-      "5       0.6     (E, B)\n",
-      "6       0.4     (E, C)\n",
-      "7       0.4  (E, C, B)\n",
+      "5       0.6     (B, E)\n",
+      "6       0.4     (C, E)\n",
+      "7       0.4  (C, B, E)\n",
       "8       0.6     (A, B)\n",
       "9       0.4     (A, E)\n",
       "10      0.4     (A, C)\n",
-      "11      0.4  (A, E, B)\n",
+      "11      0.4  (A, B, E)\n",
       "12      0.4  (A, C, B)\n",
       "13      0.4     (A, D)\n",
       "14      0.4     (D, B)\n",
@@ -32,14 +32,14 @@
       "Association Rules:\n",
       "    antecedents consequents  antecedent support  consequent support  support  \\\n",
       "0          (E)         (B)                 0.6                 1.0      0.6   \n",
-      "1       (E, C)         (B)                 0.4                 1.0      0.4   \n",
+      "1       (C, E)         (B)                 0.4                 1.0      0.4   \n",
       "2          (A)         (B)                 0.6                 1.0      0.6   \n",
       "3       (A, E)         (B)                 0.4                 1.0      0.4   \n",
       "4       (A, C)         (B)                 0.4                 1.0      0.4   \n",
       "5          (D)         (A)                 0.4                 0.6      0.4   \n",
       "6          (D)         (B)                 0.4                 1.0      0.4   \n",
       "7       (A, D)         (B)                 0.4                 1.0      0.4   \n",
-      "8       (D, B)         (A)                 0.4                 0.6      0.4   \n",
+      "8       (B, D)         (A)                 0.4                 0.6      0.4   \n",
       "9          (D)      (A, B)                 0.4                 0.6      0.4   \n",
       "10         (C)         (B)                 0.8                 1.0      0.8   \n",
       "11         (B)         (C)                 1.0                 0.8      0.8   \n",
@@ -116,6 +116,217 @@
     "# Generate association rules\n",
     "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.7)\n",
     "print(\"\\nAssociation Rules:\\n\", rules)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C  D  E\n",
+       "0  1  1  0  1  0\n",
+       "1  0  1  1  1  1\n",
+       "2  1  1  1  0  1\n",
+       "3  0  1  0  0  1\n",
+       "4  1  1  1  1  0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from mlxtend.frequent_patterns import association_rules\n",
+    "from mlxtend.frequent_patterns import fpgrowth\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = [\n",
+    "    [1, 1, 0, 1, 0],\n",
+    "    [0, 1, 1, 1, 1],\n",
+    "    [1, 1, 1, 0, 1],\n",
+    "    [0, 1, 0, 0, 1],\n",
+    "    [1, 1, 1, 1, 0]\n",
+    "]\n",
+    "\n",
+    "columns = ['A', 'B', 'C', 'D', 'E']\n",
+    "df = pd.DataFrame(data, columns=columns)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequent Itemsets:\n",
+      "     support   itemsets\n",
+      "0       1.0        (B)\n",
+      "1       0.6        (D)\n",
+      "2       0.6        (A)\n",
+      "3       0.6        (E)\n",
+      "4       0.6        (C)\n",
+      "5       0.6     (D, B)\n",
+      "6       0.6     (A, B)\n",
+      "7       0.4     (A, D)\n",
+      "8       0.4     (A, C)\n",
+      "9       0.4  (A, D, B)\n",
+      "10      0.4  (A, C, B)\n",
+      "11      0.6     (B, E)\n",
+      "12      0.6     (C, B)\n",
+      "13      0.4     (C, D)\n",
+      "14      0.4     (C, E)\n",
+      "15      0.4  (C, B, D)\n",
+      "16      0.4  (C, B, E)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sande\\Desktop\\Machine_Learning_Concept\\myenv\\Lib\\site-packages\\mlxtend\\frequent_patterns\\fpcommon.py:161: DeprecationWarning: DataFrames with non-bool types result in worse computationalperformance and their support might be discontinued in the future.Please use a DataFrame with bool type\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "frequent_itemsets= fpgrowth(df, min_support=0.4, use_colnames=True)\n",
+    "print(\"Frequent Itemsets:\\n\", frequent_itemsets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Association Rules:\n",
+      "   antecedents consequents  antecedent support  consequent support  support  \\\n",
+      "0         (D)         (B)                 0.6                 1.0      0.6   \n",
+      "1         (A)         (B)                 0.6                 1.0      0.6   \n",
+      "2      (A, D)         (B)                 0.4                 1.0      0.4   \n",
+      "3      (A, C)         (B)                 0.4                 1.0      0.4   \n",
+      "4         (E)         (B)                 0.6                 1.0      0.6   \n",
+      "5         (C)         (B)                 0.6                 1.0      0.6   \n",
+      "6      (C, D)         (B)                 0.4                 1.0      0.4   \n",
+      "7      (C, E)         (B)                 0.4                 1.0      0.4   \n",
+      "\n",
+      "   confidence  lift  representativity  leverage  conviction  zhangs_metric  \\\n",
+      "0         1.0   1.0               1.0       0.0         inf            0.0   \n",
+      "1         1.0   1.0               1.0       0.0         inf            0.0   \n",
+      "2         1.0   1.0               1.0       0.0         inf            0.0   \n",
+      "3         1.0   1.0               1.0       0.0         inf            0.0   \n",
+      "4         1.0   1.0               1.0       0.0         inf            0.0   \n",
+      "5         1.0   1.0               1.0       0.0         inf            0.0   \n",
+      "6         1.0   1.0               1.0       0.0         inf            0.0   \n",
+      "7         1.0   1.0               1.0       0.0         inf            0.0   \n",
+      "\n",
+      "   jaccard  certainty  kulczynski  \n",
+      "0      0.6        0.0         0.8  \n",
+      "1      0.6        0.0         0.8  \n",
+      "2      0.4        0.0         0.7  \n",
+      "3      0.4        0.0         0.7  \n",
+      "4      0.6        0.0         0.8  \n",
+      "5      0.6        0.0         0.8  \n",
+      "6      0.4        0.0         0.7  \n",
+      "7      0.4        0.0         0.7  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sande\\Desktop\\Machine_Learning_Concept\\myenv\\Lib\\site-packages\\mlxtend\\frequent_patterns\\association_rules.py:186: RuntimeWarning: invalid value encountered in divide\n",
+      "  cert_metric = np.where(certainty_denom == 0, 0, certainty_num / certainty_denom)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.7)\n",
+    "print(\"\\nAssociation Rules:\\n\", rules)"
    ]
   }
  ],
